# commandclaw-mcp

./: .dockerignore  .env.example  .gitignore  COMMANDBOOK.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/brainstorm-to-tasks/: SKILL.md
.agents/skills/brainstorm-to-tasks/templates/: tasks.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/brainstorming/templates/: notes.md
.agents/skills/bugfix/: SKILL.md
.agents/skills/implement-tasks/: SKILL.md
.kilocode/skills/: brainstorm-to-tasks
.templates/: bugfix.md
.windsurf/skills/: implement-tasks
brainstorming/issue-001-implement-phase-1/: notes.md
examples/world_clock/: Dockerfile  server.py
guiding_docs/: VISION.md
policies/: mcp_tools.yaml
src/commandclaw_mcp/: __init__.py  __main__.py  config.py
src/commandclaw_mcp/auth/: credential_store.py  hmac_verify.py  phantom.py  rotation.py
src/commandclaw_mcp/gateway/: admin.py  aggregator.py  app.py  errors.py  transport.py
src/commandclaw_mcp/middleware/: auth_middleware.py  logging_middleware.py  rbac_middleware.py
src/commandclaw_mcp/observability/: audit.py  metrics.py  tracing.py
src/commandclaw_mcp/rbac/: call_guard.py  discovery_filter.py  policy.py  rate_limiter.py
src/commandclaw_mcp/security/: dns_rebinding.py  memory.py  validation.py
src/commandclaw_mcp/session/: manager.py  pool.py  redis_store.py  token_encoded.py
